🐛fix: fixed logo bg color not changed in dark mode

--- a/src/styles/public.scss
+++ b/src/styles/public.scss
@@ -13,3 +13,9 @@ body {
   height: 4px !important;
   background: purple !important;
 }
+
+html.dark {
+  .logo-wrapper {
+    background: #000!important;
+  }
+}
